# Lab_2.19

./: .gitignore  README.md  pyproject.toml
program/: indiv_1.py  indiv_2.py
